--- a/fsuipc-version/source/repos/GeoShot/GeoShot/geoshottr-fsuipc.csproj
+++ b/fsuipc-version/source/repos/GeoShot/GeoShot/geoshottr-fsuipc.csproj
@@ -19,8 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FSUIPCClientDLL" Version="3.3.13" />
     <PackageReference Include="SkiaSharp" Version="3.116.1" />
-    <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
