thought i had it, but i don't lol

--- a/simconnect-version/source/repos/GeoShot/GeoShot/GeoShot.csproj
+++ b/simconnect-version/source/repos/GeoShot/GeoShot/GeoShot.csproj
@@ -11,8 +11,7 @@
 
   <ItemGroup>
     <Reference Include="Microsoft.FlightSimulator.SimConnect">
-      <HintPath>..\..\..\..\..\..\MSFS SDK\SimConnect SDK\lib\managed\Microsoft.FlightSimulator.SimConnect.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\..\..\..\..\..\..\..\..\MSFS SDK\SimConnect SDK\lib\managed\Microsoft.FlightSimulator.SimConnect.dll</HintPath>
     </Reference>
   </ItemGroup>
 
